[gd_scene load_steps=48 format=3 uid="uid://4xrlcemn4wmf"]

[ext_resource type="Script" path="res://scripts/level_controller.gd" id="1_mmqnj"]
[ext_resource type="PackedScene" uid="uid://dy6rfphsyvehp" path="res://prefabs/punisher.tscn" id="2_kkl4b"]
[ext_resource type="Texture2D" uid="uid://dgpy8sey60xjr" path="res://textures/character_femaleAdventurer_sheetHD.png" id="3_t1x8v"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="4_fho2x"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="5_e3gyj"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="6_ud7j4"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_l6x6u"]
[ext_resource type="Texture2D" uid="uid://csn7lhln11087" path="res://textures/flagGreen2.png" id="8_nujh6"]
[ext_resource type="Texture2D" uid="uid://biqwgtxxx2ee5" path="res://textures/flagYellow.png" id="9_o7heh"]
[ext_resource type="Texture2D" uid="uid://c7ww3a6n54whc" path="res://textures/flagRed.png" id="10_6fmdw"]
[ext_resource type="Texture2D" uid="uid://bp0suvr8wupj8" path="res://textures/star.png" id="11_0nqdi"]
[ext_resource type="Script" path="res://scripts/announce_commands.gd" id="12_vletw"]
[ext_resource type="PackedScene" uid="uid://p2et6u5v7uqr" path="res://prefabs/trigger_2d.tscn" id="13_t6jor"]
[ext_resource type="Texture2D" uid="uid://ca4mhp54dh5ts" path="res://textures/caneRed.png" id="14_ag3c8"]
[ext_resource type="Texture2D" uid="uid://bp2qnyp1fe5pv" path="res://textures/caneRedTop.png" id="15_3luop"]
[ext_resource type="Script" path="res://scripts/detect_starting_line_reached.gd" id="16_lwy4a"]
[ext_resource type="Texture2D" uid="uid://dilyi8tvhx6bv" path="res://textures/caneGreen.png" id="17_08f1d"]
[ext_resource type="Texture2D" uid="uid://b22bochr2nsa2" path="res://textures/caneGreenTop.png" id="18_hg1c1"]
[ext_resource type="Script" path="res://scripts/detect_finish_line_reached.gd" id="19_lj42u"]
[ext_resource type="PackedScene" uid="uid://boc8qbty5ese6" path="res://prefabs/fence_static_body_2d.tscn" id="20_k3tmg"]
[ext_resource type="Script" path="res://scripts/toggle_collision.gd" id="21_254b3"]
[ext_resource type="Texture2D" uid="uid://t5ee02jhh66e" path="res://textures/tundraCenter.png" id="22_t4ypd"]
[ext_resource type="Texture2D" uid="uid://jnv2jrdo42x7" path="res://textures/tundraMid.png" id="23_jwlcr"]
[ext_resource type="Script" path="res://scripts/move_to_here.gd" id="23_roy13"]
[ext_resource type="AudioStream" uid="uid://khkpkakhgenh" path="res://audio/Children_Game_Music/WAV/SFX_Complete.wav" id="24_sqs1e"]
[ext_resource type="AudioStream" uid="uid://b76m01fh00qfl" path="res://audio/prompts/prompt_1.ogg" id="25_rr0i8"]
[ext_resource type="Texture2D" uid="uid://lkqpn4lblqo6" path="res://textures/spikesTop.png" id="26_gcd2y"]
[ext_resource type="Script" path="res://scripts/audio_player.gd" id="26_ssk8h"]
[ext_resource type="Script" path="res://scripts/spike_area.gd" id="27_4rtau"]
[ext_resource type="Script" path="res://scripts/bind_player_check_state_with_level_change.gd" id="27_a2y5i"]
[ext_resource type="Script" path="res://scripts/check_character_body_collision.gd" id="28_pbw4b"]
[ext_resource type="PackedScene" uid="uid://pyvemhdel8lv" path="res://prefabs/ice_zone_trigger_2d.tscn" id="28_somww"]
[ext_resource type="Texture2D" uid="uid://bal7nwxcf3h86" path="res://textures/spikeTop.png" id="31_1a7ga"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0phsj"]
atlas = ExtResource("3_t1x8v")
region = Rect2(0, 256, 192, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_h00rt"]
atlas = ExtResource("3_t1x8v")
region = Rect2(960, 0, 192, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rwg1"]
atlas = ExtResource("3_t1x8v")
region = Rect2(1152, 0, 192, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjvmt"]
atlas = ExtResource("3_t1x8v")
region = Rect2(576, 0, 192, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe2oc"]
atlas = ExtResource("3_t1x8v")
region = Rect2(0, 0, 192, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs82v"]
atlas = ExtResource("3_t1x8v")
region = Rect2(1536, 0, 192, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1fkq"]
atlas = ExtResource("3_t1x8v")
region = Rect2(1536, 0, 192, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_puma4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0phsj")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h00rt")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rwg1")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjvmt")
}],
"loop": true,
"name": &"check",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe2oc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs82v")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1fkq")
}],
"loop": true,
"name": &"soleil",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_saorr"]
size = Vector2(18.8854, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xdvd"]
size = Vector2(20, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dviuj"]
size = Vector2(70, 1080)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71hhf"]
size = Vector2(1920, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swpjo"]
size = Vector2(20, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71hak"]
size = Vector2(400, 70)

[node name="Level3" type="Node2D"]
position = Vector2(3840, 0)
script = ExtResource("1_mmqnj")

[node name="Punisher" parent="." instance=ExtResource("2_kkl4b")]
position = Vector2(73, 1082)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1763, 946)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_puma4")
animation = &"check"

[node name="StateChart" type="Node" parent="."]
script = ExtResource("4_fho2x")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("5_e3gyj")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("6_ud7j4")

[node name="ToGoState" type="Node" parent="StateChart/CompoundState/IdleState"]
script = ExtResource("7_l6x6u")
to = NodePath("../../GoState")
event = &"started"
delay_in_seconds = "0.0"

[node name="GoState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_e3gyj")
initial_state = NodePath("1State")

[node name="1State" type="Node" parent="StateChart/CompoundState/GoState"]
script = ExtResource("6_ud7j4")

[node name="Transition" type="Node" parent="StateChart/CompoundState/GoState/1State"]
script = ExtResource("7_l6x6u")
to = NodePath("../../2State")
delay_in_seconds = "1.1"

[node name="2State" type="Node" parent="StateChart/CompoundState/GoState"]
script = ExtResource("6_ud7j4")

[node name="Transition" type="Node" parent="StateChart/CompoundState/GoState/2State"]
script = ExtResource("7_l6x6u")
to = NodePath("../../3State")
delay_in_seconds = "0.7
"

[node name="3State" type="Node" parent="StateChart/CompoundState/GoState"]
script = ExtResource("6_ud7j4")

[node name="Transition" type="Node" parent="StateChart/CompoundState/GoState/3State"]
script = ExtResource("7_l6x6u")
to = NodePath("../../SoleilState")
delay_in_seconds = "1.0"

[node name="SoleilState" type="Node" parent="StateChart/CompoundState/GoState"]
script = ExtResource("6_ud7j4")

[node name="Transition" type="Node" parent="StateChart/CompoundState/GoState/SoleilState"]
script = ExtResource("7_l6x6u")
to = NodePath("../../CheckState")
delay_in_seconds = "0.8"

[node name="CheckState" type="Node" parent="StateChart/CompoundState/GoState"]
script = ExtResource("6_ud7j4")

[node name="Transition" type="Node" parent="StateChart/CompoundState/GoState/CheckState"]
script = ExtResource("7_l6x6u")
to = NodePath("../../1State")
delay_in_seconds = "1.0"

[node name="ToEndState" type="Node" parent="StateChart/CompoundState/GoState"]
script = ExtResource("7_l6x6u")
to = NodePath("../../EndedState")
event = &"ended"
delay_in_seconds = "0.0"

[node name="ToIdleState" type="Node" parent="StateChart/CompoundState/GoState"]
script = ExtResource("7_l6x6u")
to = NodePath("../../IdleState")
event = &"idled"
delay_in_seconds = "0.0"

[node name="EndedState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("6_ud7j4")

[node name="ToIdleState" type="Node" parent="StateChart/CompoundState/EndedState"]
script = ExtResource("7_l6x6u")
to = NodePath("../../IdleState")
event = &"idled"
delay_in_seconds = "0.0"

[node name="LevelHUD" type="Control" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 1920.0
offset_bottom = 1081.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="LevelHUD"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -148.0
offset_top = 437.0
offset_right = 52.0
offset_bottom = 655.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Instructions" type="VBoxContainer" parent="LevelHUD/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="1Instruction" type="HBoxContainer" parent="LevelHUD/PanelContainer/Instructions"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="LevelHUD/PanelContainer/Instructions/1Instruction"]
layout_mode = 2
size_flags_horizontal = 3
text = "1..."

[node name="TextureRect" type="TextureRect" parent="LevelHUD/PanelContainer/Instructions/1Instruction"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("8_nujh6")

[node name="2Instruction" type="HBoxContainer" parent="LevelHUD/PanelContainer/Instructions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="LevelHUD/PanelContainer/Instructions/2Instruction"]
layout_mode = 2
size_flags_horizontal = 3
text = "2..."

[node name="TextureRect" type="TextureRect" parent="LevelHUD/PanelContainer/Instructions/2Instruction"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("8_nujh6")

[node name="3Instruction" type="HBoxContainer" parent="LevelHUD/PanelContainer/Instructions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="LevelHUD/PanelContainer/Instructions/3Instruction"]
layout_mode = 2
size_flags_horizontal = 3
text = "3..."

[node name="TextureRect" type="TextureRect" parent="LevelHUD/PanelContainer/Instructions/3Instruction"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("8_nujh6")

[node name="SoleilInstruction" type="HBoxContainer" parent="LevelHUD/PanelContainer/Instructions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="LevelHUD/PanelContainer/Instructions/SoleilInstruction"]
layout_mode = 2
size_flags_horizontal = 3
text = "Soleil!
"

[node name="TextureRect" type="TextureRect" parent="LevelHUD/PanelContainer/Instructions/SoleilInstruction"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("9_o7heh")

[node name="CheckInstruction" type="HBoxContainer" parent="LevelHUD/PanelContainer/Instructions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="LevelHUD/PanelContainer/Instructions/CheckInstruction"]
layout_mode = 2
size_flags_horizontal = 3
text = "Don't move!"

[node name="TextureRect" type="TextureRect" parent="LevelHUD/PanelContainer/Instructions/CheckInstruction"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("10_6fmdw")

[node name="LevelCompleted" type="VBoxContainer" parent="LevelHUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -35.0
offset_right = 174.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="LevelHUD/LevelCompleted"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="LevelHUD/LevelCompleted/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level Completed !"

[node name="TextureRect" type="TextureRect" parent="LevelHUD/LevelCompleted/HBoxContainer"]
layout_mode = 2
texture = ExtResource("11_0nqdi")

[node name="AnnounceCommands" type="Node" parent="."]
script = ExtResource("12_vletw")

[node name="BindPlayerCheckState" type="Node" parent="."]
script = ExtResource("27_a2y5i")

[node name="TriggerEnterLevel" parent="." instance=ExtResource("13_t6jor")]
position = Vector2(150, 990)

[node name="StartingLineArea2D" type="Area2D" parent="."]
position = Vector2(282, 943)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartingLineArea2D"]
position = Vector2(44, -3)
rotation = 3.14159
scale = Vector2(4.61429, 2.53186)
shape = SubResource("RectangleShape2D_saorr")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="LollipopBaseBrown" type="Sprite2D" parent="StartingLineArea2D"]
position = Vector2(-2, 34)
texture = ExtResource("14_ag3c8")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="LollipopFruitGreen" type="Sprite2D" parent="StartingLineArea2D"]
position = Vector2(-2, -36)
texture = ExtResource("15_3luop")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="DetectStartingLineReached" type="Node" parent="StartingLineArea2D"]
script = ExtResource("16_lwy4a")

[node name="FinishLineArea2D" type="Area2D" parent="."]
position = Vector2(1570, 939)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishLineArea2D"]
position = Vector2(39, -3)
scale = Vector2(-4.61429, -2.53186)
shape = SubResource("RectangleShape2D_7xdvd")
metadata/_edit_lock_ = true

[node name="LollipopBaseBrown" type="Sprite2D" parent="FinishLineArea2D"]
position = Vector2(-2, 34)
texture = ExtResource("17_08f1d")
metadata/_edit_lock_ = true

[node name="LollipopFruitGreen" type="Sprite2D" parent="FinishLineArea2D"]
position = Vector2(-2, -36)
texture = ExtResource("18_hg1c1")
metadata/_edit_lock_ = true

[node name="DetectFinishLineReached" type="Node" parent="FinishLineArea2D"]
script = ExtResource("19_lj42u")

[node name="FenceStaticBody2D" parent="." instance=ExtResource("20_k3tmg")]

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(1885, 540)
script = ExtResource("21_254b3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("RectangleShape2D_dviuj")

[node name="Sprite2D" type="Sprite2D" parent="RightWall"]
texture_filter = 1
texture_repeat = 2
texture = ExtResource("22_t4ypd")
region_enabled = true
region_rect = Rect2(0, 0, 70, 1080)
region_filter_clip_enabled = true

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(35, 540)
script = ExtResource("21_254b3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("RectangleShape2D_dviuj")

[node name="Sprite2D" type="Sprite2D" parent="LeftWall"]
texture_filter = 1
texture_repeat = 2
texture = ExtResource("22_t4ypd")
region_enabled = true
region_rect = Rect2(0, 0, 70, 1080)
region_filter_clip_enabled = true

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(960, 1044.23)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("RectangleShape2D_71hhf")

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
texture_repeat = 2
texture = ExtResource("23_jwlcr")
region_enabled = true
region_rect = Rect2(0, 0, 1920, 70)

[node name="ExitLevelTrigger2D" parent="." instance=ExtResource("13_t6jor")]
visible = false

[node name="StartingPosition" type="Node2D" parent="."]
position = Vector2(189, 996)
script = ExtResource("23_roy13")

[node name="SpikeGroup" type="Node2D" parent="."]
position = Vector2(1723, 999)

[node name="SpikesTop2" type="Sprite2D" parent="SpikeGroup"]
position = Vector2(-545, -356)
texture = ExtResource("26_gcd2y")

[node name="SpikesTop" type="Sprite2D" parent="SpikeGroup"]
position = Vector2(-479, -356)
texture = ExtResource("26_gcd2y")

[node name="SpikePosition" type="Node2D" parent="SpikeGroup"]
position = Vector2(-478, -373)

[node name="SpikeRigidBody2D" type="RigidBody2D" parent="SpikeGroup" groups=["projectile"]]
position = Vector2(-1723, -999)
gravity_scale = 0.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("27_4rtau")

[node name="CheckCollision" type="Node" parent="SpikeGroup/SpikeRigidBody2D"]
script = ExtResource("28_pbw4b")
check_groups = Array[String](["projectile"])

[node name="SpikeTop" type="Sprite2D" parent="SpikeGroup/SpikeRigidBody2D"]
position = Vector2(1244, 643)
texture = ExtResource("31_1a7ga")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeGroup/SpikeRigidBody2D"]
position = Vector2(1245, 626)
shape = SubResource("RectangleShape2D_swpjo")

[node name="Trigger2D" parent="SpikeGroup" instance=ExtResource("13_t6jor")]
position = Vector2(-642, -11)

[node name="IceZoneTrigger2D" parent="." instance=ExtResource("28_somww")]
position = Vector2(1144, 1044)

[node name="CollisionShape2D" parent="IceZoneTrigger2D" index="0"]
shape = SubResource("RectangleShape2D_71hak")

[node name="IceBlockHalfAlt" parent="IceZoneTrigger2D" index="1"]
region_rect = Rect2(0, 0, 400, 70)

[node name="WinAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_sqs1e")
volume_db = -3.239

[node name="GameAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 1
stream = ExtResource("25_rr0i8")
script = ExtResource("26_ssk8h")

[connection signal="level_entered" from="." to="Punisher" method="_on_level_entered"]
[connection signal="level_entered" from="." to="BindPlayerCheckState" method="_on_level_entered"]
[connection signal="level_entered" from="." to="LeftWall" method="turn_off"]
[connection signal="level_exited" from="." to="Punisher" method="_on_level_exited"]
[connection signal="level_exited" from="." to="BindPlayerCheckState" method="_on_level_exited"]
[connection signal="level_exited" from="." to="RightWall" method="turn_off"]
[connection signal="reset" from="." to="LevelHUD/LevelCompleted" method="hide"]
[connection signal="reset" from="." to="AnnounceCommands" method="reset_game"]
[connection signal="reset" from="." to="StartingPosition" method="do"]
[connection signal="state_entered" from="StateChart/CompoundState/IdleState" to="LevelHUD/PanelContainer" method="hide"]
[connection signal="state_entered" from="StateChart/CompoundState/IdleState" to="LevelHUD/PanelContainer/Instructions/1Instruction" method="hide"]
[connection signal="state_entered" from="StateChart/CompoundState/IdleState" to="LevelHUD/PanelContainer/Instructions/2Instruction" method="hide"]
[connection signal="state_entered" from="StateChart/CompoundState/IdleState" to="LevelHUD/PanelContainer/Instructions/3Instruction" method="hide"]
[connection signal="state_entered" from="StateChart/CompoundState/IdleState" to="LevelHUD/PanelContainer/Instructions/SoleilInstruction" method="hide"]
[connection signal="state_entered" from="StateChart/CompoundState/IdleState" to="LevelHUD/PanelContainer/Instructions/CheckInstruction" method="hide"]
[connection signal="state_entered" from="StateChart/CompoundState/IdleState" to="LevelHUD/LevelCompleted" method="hide"]
[connection signal="state_entered" from="StateChart/CompoundState/IdleState" to="AnimatedSprite2D" method="play" binds= [&"idle"]]
[connection signal="state_entered" from="StateChart/CompoundState/GoState" to="LevelHUD/PanelContainer" method="show"]
[connection signal="state_entered" from="StateChart/CompoundState/GoState" to="GameAudioStreamPlayer" method="play"]
[connection signal="state_exited" from="StateChart/CompoundState/GoState" to="LevelHUD/PanelContainer" method="hide"]
[connection signal="state_exited" from="StateChart/CompoundState/GoState" to="GameAudioStreamPlayer" method="stop"]
[connection signal="state_exited" from="StateChart/CompoundState/GoState" to="AnimatedSprite2D" method="play" binds= [&"idle"]]
[connection signal="state_entered" from="StateChart/CompoundState/GoState/1State" to="LevelHUD/PanelContainer/Instructions/1Instruction" method="show"]
[connection signal="state_entered" from="StateChart/CompoundState/GoState/1State" to="GameAudioStreamPlayer" method="play"]
[connection signal="state_entered" from="StateChart/CompoundState/GoState/1State" to="AnimatedSprite2D" method="play" binds= [&"1"]]
[connection signal="state_exited" from="StateChart/CompoundState/GoState/1State" to="LevelHUD/PanelContainer/Instructions/1Instruction" method="hide"]
[connection signal="state_entered" from="StateChart/CompoundState/GoState/2State" to="LevelHUD/PanelContainer/Instructions/2Instruction" method="show"]
[connection signal="state_entered" from="StateChart/CompoundState/GoState/2State" to="AnimatedSprite2D" method="play" binds= [&"2"]]
[connection signal="state_exited" from="StateChart/CompoundState/GoState/2State" to="LevelHUD/PanelContainer/Instructions/2Instruction" method="hide"]
[connection signal="state_entered" from="StateChart/CompoundState/GoState/3State" to="LevelHUD/PanelContainer/Instructions/3Instruction" method="show"]
[connection signal="state_entered" from="StateChart/CompoundState/GoState/3State" to="AnimatedSprite2D" method="play" binds= [&"3"]]
[connection signal="state_exited" from="StateChart/CompoundState/GoState/3State" to="LevelHUD/PanelContainer/Instructions/3Instruction" method="hide"]
[connection signal="state_entered" from="StateChart/CompoundState/GoState/SoleilState" to="LevelHUD/PanelContainer/Instructions/SoleilInstruction" method="show"]
[connection signal="state_entered" from="StateChart/CompoundState/GoState/SoleilState" to="AnimatedSprite2D" method="play" binds= [&"soleil"]]
[connection signal="state_exited" from="StateChart/CompoundState/GoState/SoleilState" to="LevelHUD/PanelContainer/Instructions/SoleilInstruction" method="hide"]
[connection signal="state_entered" from="StateChart/CompoundState/GoState/CheckState" to="LevelHUD/PanelContainer/Instructions/CheckInstruction" method="show"]
[connection signal="state_entered" from="StateChart/CompoundState/GoState/CheckState" to="AnimatedSprite2D" method="play" binds= [&"check"]]
[connection signal="state_exited" from="StateChart/CompoundState/GoState/CheckState" to="LevelHUD/PanelContainer/Instructions/CheckInstruction" method="hide"]
[connection signal="state_entered" from="StateChart/CompoundState/EndedState" to="LevelHUD/LevelCompleted" method="show"]
[connection signal="state_entered" from="StateChart/CompoundState/EndedState" to="WinAudioStreamPlayer" method="play"]
[connection signal="state_exited" from="StateChart/CompoundState/EndedState" to="LevelHUD/LevelCompleted" method="hide"]
[connection signal="target_group_entered" from="TriggerEnterLevel" to="LeftWall" method="turn_on"]
[connection signal="body_entered" from="StartingLineArea2D" to="StartingLineArea2D/DetectStartingLineReached" method="_on_starting_line_area_2d_body_entered"]
[connection signal="entered_play_area" from="StartingLineArea2D/DetectStartingLineReached" to="AnnounceCommands" method="_on_detect_starting_line_reached_entered_play_area"]
[connection signal="body_entered" from="FinishLineArea2D" to="FinishLineArea2D/DetectFinishLineReached" method="_on_finish_line_area_2d_body_entered"]
[connection signal="finished_line_reached" from="FinishLineArea2D/DetectFinishLineReached" to="AnnounceCommands" method="_on_detect_finish_line_reached_finished_line_reached"]
[connection signal="target_group_entered" from="ExitLevelTrigger2D" to="." method="exit_level"]
[connection signal="has_collided" from="SpikeGroup/SpikeRigidBody2D/CheckCollision" to="SpikeGroup/SpikeRigidBody2D" method="_on_check_collision_has_collided"]
[connection signal="target_group_entered" from="SpikeGroup/Trigger2D" to="SpikeGroup/SpikeRigidBody2D" method="unfreeze"]

[editable path="IceZoneTrigger2D"]
